Statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
 name: postgresql
 namespace: postgresqldb
spec:
 serviceName: "postgresql"
 replicas: 1
 selector:
   matchLabels:
     app: postgresql
 template:
   metadata:
     labels:
       app: postgresql
   spec:
     containers:
     - name: postgresql
       image: postgres:latest
       ports:
       - containerPort: 5432
         name: postgresql
       volumeMounts:
       - name: postgresql-storage
         mountPath: /var/lib/postgresql/data
 volumeClaimTemplates:
 - metadata:
     name: postgresql-storage
   spec:
     accessModes: [ "ReadWriteOnce" ]
     resources:
       requests:
         storage: 1Gi
