Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: web
 namespace: ruby-app
spec:
 replicas: 1
 selector:
   matchLabels:
     app: web
 template:
   metadata:
     labels:
       app: web
   spec:
     containers:
     - name: web
       image: ruby-postgresql_app:latest
       ports:
       - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
 name: web
 namespace: ruby-service
spec:
 type: NodePort
 ports:
 - port: 3000
   targetPort: 3000
 selector:
   app: web
