ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: web-ingress
 namespace: ruby-ingress
spec:
 rules:
 - host: myapp.example.com
   http:
     paths:
     - pathType: Prefix
       path: "/"
       backend:
         service:
           name: web
           port:
             number: 3000
